fixed buttons on small screen

--- a/what-can-i-eat-app/src/app/pages/feed-page/recipes-search-box-by-ingredients/recipes-search-dialog/recipes-search-dialog.component.scss
+++ b/what-can-i-eat-app/src/app/pages/feed-page/recipes-search-box-by-ingredients/recipes-search-dialog/recipes-search-dialog.component.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: 5px;
+    gap: 15px;
     padding: 10px;
 }
 
@@ -20,6 +20,16 @@ button {
 
 .wide-screen-buttons {
     display: none;
+}
+
+.buttons-container {
+    gap: 10px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.buttons-container > button {
+    width: 100%;
 }
 
 @media screen and (min-width: 990px) {
